smaller circle & remove useless css

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
       <div class="header-container">
         <h1 class="site-title">{{ site.name }}&nbsp;<a href="/atom.xml" class="site-rss"><i class="icon-rss"></i></a></h1>
         <div class="site-owner">
-          <a href="/about"><img src="/img/avatar.png" alt="" class="owner-avatar"><b></b></a>
+          <a href="/etc/jd"><img src="/img/avatar.png" alt="" class="owner-avatar"><b></b></a>
         </div>
         <ul class="site-menu">
           <li><a href="/" data-content="&#xf015;"><span><i class="icon-home icon-large"></i>&nbsp;HOME</span></a></li>
