--- a/_src/styles/header.scss
+++ b/_src/styles/header.scss
@@ -5,7 +5,6 @@ $header-height: 120px;
 
 .header {
   background-color: $header-back-color;
-  width: 100%;
   position: relative;
   @include transition(opacity 0.3s ease);
 
@@ -29,11 +28,8 @@ $header-height: 120px;
     position: absolute;
     left: 0;
     top: 0;
-    text-align: left;
     width: $owner-size;
     height: 100%;
-    @include border-radius(50%);
-    @include transition(width 0.3s ease);
 
     .owner-avatar {
       width: $owner-size;
@@ -94,7 +90,7 @@ $header-height: 120px;
         > span {
           position: relative;
           color: transparent;
-          @include text-shadow(0 0 0 white);
+          text-shadow: 0 0 0 white;
           @include transition(text-shadow 0.3s ease);
         }
 
@@ -109,7 +105,8 @@ $header-height: 120px;
           width: 100%;
           height: 100%;
           opacity: 0;
-          @include transition(opacity 0.3s ease);
+          text-shadow: 0 0 20px white;
+          @include transition(opacity 0.3s ease, text-shadow 0.3s ease);
         }
 
         &:hover {
@@ -119,6 +116,7 @@ $header-height: 120px;
 
           &:before {
             opacity: 1;
+            text-shadow: 0 0 0 white;
           }
         }
       }
