new look and feel

--- a/_src/styles/_common.scss
+++ b/_src/styles/_common.scss
@@ -13,15 +13,15 @@ $global-width: 1200px;
 // $color-rule-4: #E7E8D1;
 // $color-rule-5: #8E001C;
 
-$color-rule-1: #434A54;
-$color-rule-2: #E6E9ED;
+$color-rule-1: #444444;
+$color-rule-2: #f6f6f6;
 $color-rule-3: #AAB2BD;
 $color-rule-4: #48CFAD;
 $color-rule-5: #48CFAD;
 // color rule
 
 $light-font-color: white;
-$font-color: #434A54;
+$font-color: $color-rule-1;
 $gray-font-color: $color-rule-3;
 
 // fonts
