--- a/_src/styles/header.scss
+++ b/_src/styles/header.scss
@@ -1,10 +1,8 @@
 @import "common";
 
-$header-back-color: $color-rule-1;
 $header-height: 120px;
 
 .header {
-  background-color: $header-back-color;
   position: relative;
   @include transition(opacity 0.3s ease);
 
@@ -20,9 +18,11 @@ $header-height: 120px;
   margin: 0 auto;
   text-align: right;
   position: relative;
+  border-bottom: 1px solid darken($color-rule-2, 10%);
+  @include box-shadow(0 1px rgba(white, 0.8));
 
   .site-owner {
-    $owner-size: 50px;
+    $owner-size: 60px;
 
     display: block;
     position: absolute;
@@ -37,7 +37,7 @@ $header-height: 120px;
       position: absolute;
       top: ($header-height - $owner-size) / 2;
       right: 0;
-      @include box-shadow(0 0 3px rgba(black, 0.6));
+      @include box-shadow(0 0 3px rgba(black, 0.9));
       @include border-radius(50%);
 
       & + b {
@@ -61,13 +61,12 @@ $header-height: 120px;
     font-size: 20px;
     height: $title-height;
     line-height: $title-height;
-    left: 60px;
+    left: 70px;
     top: 0;
-    color: white;
   }
 
   .site-rss {
-    color: white;
+    color: $font-color;
     font-size: 16px;
   }
 
@@ -81,7 +80,7 @@ $header-height: 120px;
       position: relative;
 
       > a {
-        color: $light-font-color;
+        color: $font-color;
         display: block;
         height: $header-height;
         line-height: $header-height;
@@ -91,7 +90,7 @@ $header-height: 120px;
         > span {
           position: relative;
           color: transparent;
-          text-shadow: 0 0 0 white;
+          text-shadow: 0 0 0 $font-color;
           @include transition(text-shadow 0.3s ease);
         }
 
@@ -106,18 +105,18 @@ $header-height: 120px;
           width: 100%;
           height: 100%;
           opacity: 0;
-          text-shadow: 0 0 20px white;
+          text-shadow: 0 0 20px $font-color;
           @include transition(opacity 0.3s ease, text-shadow 0.3s ease);
         }
 
         &:hover {
           > span {
-            text-shadow: 0 0 20px white;
+            text-shadow: 0 0 20px $font-color;
           }
 
           &:before {
             opacity: 1;
-            text-shadow: 0 0 0 white;
+            text-shadow: 0 0 0 $font-color;
           }
         }
       }
@@ -131,10 +130,10 @@ $header-height: 120px;
         padding-top: 10px;
         padding-bottom: 10px;
         background-color: rgba(black, 0.6);
-        color: $light-font-color;
         text-align: center;
         border-radius: 3px;
         z-index: 20;
+        color: $light-font-color;
 
         &:before {
           $caret-size: 6px;
