--- a/public/css/app.css
+++ b/public/css/app.css
@@ -67,8 +67,8 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 
 /* line 6, _src/styles/global.scss */
 body {
-  background-color: #e6e9ed;
-  color: #434a54;
+  background-color: #f6f6f6;
+  color: #444444;
   font-size: 12px;
   font-family: "Metrophobic", "Hiragino Sans GB", "微软雅黑", "黑体", sans-serif;
 }
@@ -126,14 +126,14 @@ pre, code {
   margin: 0 auto;
   padding: 30px 0;
   text-align: center;
-  border-top: 1px solid #abb5c2;
-  -webkit-box-shadow: inset 0 1px rgba(255, 255, 255, 0.5);
-  -moz-box-shadow: inset 0 1px rgba(255, 255, 255, 0.5);
-  box-shadow: inset 0 1px rgba(255, 255, 255, 0.5);
+  border-top: 1px solid #dddddd;
+  -webkit-box-shadow: inset 0 1px rgba(255, 255, 255, 0.8);
+  -moz-box-shadow: inset 0 1px rgba(255, 255, 255, 0.8);
+  box-shadow: inset 0 1px rgba(255, 255, 255, 0.8);
 }
 /* line 11, _src/styles/footer.scss */
 .footer-container .powerd {
-  color: #707c8d;
+  color: #777777;
 }
 /* line 14, _src/styles/footer.scss */
 .footer-container .powerd-list {
@@ -141,7 +141,7 @@ pre, code {
 }
 /* line 17, _src/styles/footer.scss */
 .footer-container .powerd-list a {
-  color: #434a54;
+  color: #444444;
 }
 /* line 21, _src/styles/footer.scss */
 .footer-container .powerd-list > li {
@@ -151,7 +151,7 @@ pre, code {
 }
 /* line 26, _src/styles/footer.scss */
 .footer-container .powerd-list > li:not(:nth-last-child(1)) {
-  border-right: 1px solid #707c8d;
+  border-right: 1px solid #777777;
 }
 /* line 3, _src/styles/github.scss */
 .menu-tip.github-user-container {
@@ -218,7 +218,7 @@ pre, code {
 }
 /* line 57, _src/styles/github.scss */
 .github-commits > ol > li:not(:last-child), .md .github-commits > ol > li:not(:last-child) {
-  border-bottom: 2px dashed #e6e9ed;
+  border-bottom: 2px dashed #f6f6f6;
 }
 /* line 61, _src/styles/github.scss */
 .github-commits > ol > li, .md .github-commits > ol > li {
@@ -256,7 +256,7 @@ pre, code {
 /* line 90, _src/styles/github.scss */
 .github-commits > ol > li .commit-sha > a, .md .github-commits > ol > li .commit-sha > a {
   font-family: "Source Code Pro", monospace, "Courier New";
-  background-color: #e6e9ed;
+  background-color: #f6f6f6;
   padding: 5px;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
@@ -266,7 +266,7 @@ pre, code {
 }
 /* line 6, _src/styles/header-fixed.scss */
 .header-fixed {
-  background-color: #434a54;
+  background-color: white;
   width: 100%;
   position: fixed;
   opacity: 0.95;
@@ -278,7 +278,14 @@ pre, code {
   -o-transition: top 0.3s ease;
   transition: top 0.3s ease;
 }
-/* line 17, _src/styles/header-fixed.scss */
+/* line 16, _src/styles/header-fixed.scss */
+.header-fixed .header-container {
+  border: none;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+}
+/* line 20, _src/styles/header-fixed.scss */
 .header-fixed .header-container .site-title {
   left: 10px;
   padding-left: 20px;
@@ -286,7 +293,7 @@ pre, code {
   line-height: 50px;
   font-size: 16px;
 }
-/* line 25, _src/styles/header-fixed.scss */
+/* line 28, _src/styles/header-fixed.scss */
 .header-fixed .header-container .site-title:before {
   content: "";
   display: block;
@@ -298,35 +305,38 @@ pre, code {
   border-radius: 50%;
   height: 10px;
   width: 10px;
-  border: 2px solid white;
+  border: 2px solid #444444;
   top: 18px;
   left: 0;
 }
-/* line 38, _src/styles/header-fixed.scss */
+/* line 41, _src/styles/header-fixed.scss */
+.header-fixed .header-container .site-rss {
+  font-size: 14px;
+}
+/* line 45, _src/styles/header-fixed.scss */
 .header-fixed .header-container .site-owner {
   display: none;
 }
-/* line 42, _src/styles/header-fixed.scss */
+/* line 49, _src/styles/header-fixed.scss */
 .header-fixed .header-container .site-menu {
   margin-right: 10px;
 }
-/* line 46, _src/styles/header-fixed.scss */
+/* line 53, _src/styles/header-fixed.scss */
 .header-fixed .header-container .site-menu > li > a {
   height: 50px;
   line-height: 50px;
   font-size: 14px;
 }
-/* line 51, _src/styles/header-fixed.scss */
+/* line 58, _src/styles/header-fixed.scss */
 .header-fixed .header-container .site-menu > li > .menu-tip {
   margin-top: 60px;
 }
-/* line 58, _src/styles/header-fixed.scss */
+/* line 65, _src/styles/header-fixed.scss */
 .header-fixed.show {
   top: 0;
 }
-/* line 6, _src/styles/header.scss */
+/* line 5, _src/styles/header.scss */
 .header {
-  background-color: #434a54;
   position: relative;
   -webkit-transition: opacity 0.3s ease;
   -moz-transition: opacity 0.3s ease;
@@ -334,17 +344,21 @@ pre, code {
   transition: opacity 0.3s ease;
   -webkit-animation: down-fade-in 0.5s ease-out 0.3s backwards;
 }
-/* line 11, _src/styles/header.scss */
+/* line 9, _src/styles/header.scss */
 .header.hide {
   opacity: 0;
 }
 
-/* line 18, _src/styles/header.scss */
+/* line 16, _src/styles/header.scss */
 .header-container {
   width: 1200px;
   margin: 0 auto;
   text-align: right;
   position: relative;
+  border-bottom: 1px solid #dddddd;
+  -webkit-box-shadow: 0 1px rgba(255, 255, 255, 0.8);
+  -moz-box-shadow: 0 1px rgba(255, 255, 255, 0.8);
+  box-shadow: 0 1px rgba(255, 255, 255, 0.8);
 }
 /* line 24, _src/styles/header.scss */
 .header-container .site-owner {
@@ -352,19 +366,19 @@ pre, code {
   position: absolute;
   left: 0;
   top: 0;
-  width: 50px;
+  width: 60px;
   height: 100%;
 }
 /* line 34, _src/styles/header.scss */
 .header-container .site-owner .owner-avatar {
-  width: 50px;
-  height: 50px;
+  width: 60px;
+  height: 60px;
   position: absolute;
-  top: 35px;
+  top: 30px;
   right: 0;
-  -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.6);
-  -moz-box-shadow: 0 0 3px rgba(0, 0, 0, 0.6);
-  box-shadow: 0 0 3px rgba(0, 0, 0, 0.6);
+  -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.9);
+  -moz-box-shadow: 0 0 3px rgba(0, 0, 0, 0.9);
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.9);
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
@@ -375,9 +389,9 @@ pre, code {
 .header-container .site-owner .owner-avatar + b {
   display: block;
   position: absolute;
-  width: 48px;
-  height: 48px;
-  top: 35px;
+  width: 58px;
+  height: 58px;
+  top: 30px;
   right: 0;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -393,46 +407,45 @@ pre, code {
   font-size: 20px;
   height: 120px;
   line-height: 120px;
-  left: 60px;
+  left: 70px;
   top: 0;
-  color: white;
 }
-/* line 69, _src/styles/header.scss */
+/* line 68, _src/styles/header.scss */
 .header-container .site-rss {
-  color: white;
+  color: #444444;
   font-size: 16px;
 }
-/* line 74, _src/styles/header.scss */
+/* line 73, _src/styles/header.scss */
 .header-container .site-menu {
   font-size: 0;
 }
-/* line 77, _src/styles/header.scss */
+/* line 76, _src/styles/header.scss */
 .header-container .site-menu > li {
   display: inline-block;
   font-size: 16px;
   margin-left: 80px;
   position: relative;
 }
-/* line 83, _src/styles/header.scss */
+/* line 82, _src/styles/header.scss */
 .header-container .site-menu > li > a {
-  color: white;
+  color: #444444;
   display: block;
   height: 120px;
   line-height: 120px;
   position: relative;
   text-align: center;
 }
-/* line 91, _src/styles/header.scss */
+/* line 90, _src/styles/header.scss */
 .header-container .site-menu > li > a > span {
   position: relative;
   color: transparent;
-  text-shadow: 0 0 0 white;
+  text-shadow: 0 0 0 #444444;
   -webkit-transition: text-shadow 0.3s ease;
   -moz-transition: text-shadow 0.3s ease;
   -o-transition: text-shadow 0.3s ease;
   transition: text-shadow 0.3s ease;
 }
-/* line 98, _src/styles/header.scss */
+/* line 97, _src/styles/header.scss */
 .header-container .site-menu > li > a:before {
   content: attr(data-content);
   font-family: FontAwesome;
@@ -444,22 +457,22 @@ pre, code {
   width: 100%;
   height: 100%;
   opacity: 0;
-  text-shadow: 0 0 20px white;
+  text-shadow: 0 0 20px #444444;
   -webkit-transition: opacity 0.3s ease, text-shadow 0.3s ease;
   -moz-transition: opacity 0.3s ease, text-shadow 0.3s ease;
   -o-transition: opacity 0.3s ease, text-shadow 0.3s ease;
   transition: opacity 0.3s ease, text-shadow 0.3s ease;
 }
-/* line 114, _src/styles/header.scss */
+/* line 113, _src/styles/header.scss */
 .header-container .site-menu > li > a:hover > span {
-  text-shadow: 0 0 20px white;
+  text-shadow: 0 0 20px #444444;
 }
-/* line 118, _src/styles/header.scss */
+/* line 117, _src/styles/header.scss */
 .header-container .site-menu > li > a:hover:before {
   opacity: 1;
-  text-shadow: 0 0 0 white;
+  text-shadow: 0 0 0 #444444;
 }
-/* line 125, _src/styles/header.scss */
+/* line 124, _src/styles/header.scss */
 .header-container .site-menu > li > .menu-tip {
   position: absolute;
   display: none;
@@ -469,12 +482,12 @@ pre, code {
   padding-top: 10px;
   padding-bottom: 10px;
   background-color: rgba(0, 0, 0, 0.6);
-  color: white;
   text-align: center;
   border-radius: 3px;
   z-index: 20;
+  color: white;
 }
-/* line 139, _src/styles/header.scss */
+/* line 138, _src/styles/header.scss */
 .header-container .site-menu > li > .menu-tip:before {
   content: "";
   display: block;
@@ -486,20 +499,20 @@ pre, code {
   left: 50%;
   margin-left: -6px;
 }
-/* line 155, _src/styles/header.scss */
+/* line 154, _src/styles/header.scss */
 .header-container .site-menu > li:hover > .menu-tip {
   display: block;
   -webkit-animation: down-fade-in-2 0.5s ease-out backwards;
 }
 
 @-webkit-keyframes down-fade-in {
-  /* line 165, _src/styles/header.scss */
+  /* line 164, _src/styles/header.scss */
   0% {
     top: -30px;
     opacity: 0;
   }
 
-  /* line 169, _src/styles/header.scss */
+  /* line 168, _src/styles/header.scss */
   100% {
     top: 0;
     opacity: 1;
@@ -507,13 +520,13 @@ pre, code {
 }
 
 @-webkit-keyframes down-fade-in-2 {
-  /* line 176, _src/styles/header.scss */
+  /* line 175, _src/styles/header.scss */
   0% {
     top: -10px;
     opacity: 0;
   }
 
-  /* line 180, _src/styles/header.scss */
+  /* line 179, _src/styles/header.scss */
   100% {
     top: 0;
     opacity: 1;
@@ -603,7 +616,7 @@ pre, code {
 }
 /* line 82, _src/styles/markdown.scss */
 .md hr {
-  border-top: 1px dashed #abb5c2;
+  border-top: 1px dashed #c3c3c3;
   border-left: none;
   border-bottom: none;
 }
@@ -645,31 +658,48 @@ pre, code {
 /* line 13, _src/styles/post.scss */
 .post .post-title {
   display: block;
-  color: #48cfad;
-  border-bottom: 2px solid #48cfad;
-  padding: 0 40px;
-  -webkit-transition: border 0.3s ease;
-  -moz-transition: border 0.3s ease;
-  -o-transition: border 0.3s ease;
-  transition: border 0.3s ease;
+  background-color: #48cfad;
+  color: white;
+  padding: 30px 40px;
+  -webkit-border-radius: 3px 3px 0 0;
+  -moz-border-radius: 3px 3px 0 0;
+  -ms-border-radius: 3px 3px 0 0;
+  -o-border-radius: 3px 3px 0 0;
+  border-radius: 3px 3px 0 0;
 }
-/* line 21, _src/styles/post.scss */
-.post .post-title > h2 {
-  display: inline;
-  font-size: 30px;
-  line-height: 2.5em;
-  font-weight: bold;
-}
-/* line 28, _src/styles/post.scss */
+/* line 20, _src/styles/post.scss */
 .post .post-title > span {
-  margin-left: 30px;
+  display: block;
   font-size: 16px;
 }
-/* line 34, _src/styles/post.scss */
-.post a.post-title:hover {
-  border-width: 15px;
+/* line 25, _src/styles/post.scss */
+.post .post-title > h2 {
+  display: block;
+  font-size: 30px;
+  font-weight: bold;
+  position: relative;
 }
-/* line 38, _src/styles/post.scss */
+/* line 31, _src/styles/post.scss */
+.post .post-title > h2:before {
+  content: attr(data-icon);
+  display: block;
+  position: absolute;
+  opacity: 0;
+  font-size: 16px;
+  font-weight: lighter;
+  top: 9px;
+  left: -20px;
+  font-family: FontAwesome;
+  -webkit-transition: opacity 0.3s ease;
+  -moz-transition: opacity 0.3s ease;
+  -o-transition: opacity 0.3s ease;
+  transition: opacity 0.3s ease;
+}
+/* line 47, _src/styles/post.scss */
+.post a.post-title:hover h2:before {
+  opacity: 1;
+}
+/* line 51, _src/styles/post.scss */
 .post .post-content {
   background-color: white;
   -webkit-border-radius: 0 0 3px 3px;
@@ -680,11 +710,11 @@ pre, code {
   padding: 20px 40px;
 }
 
-/* line 47, _src/styles/post.scss */
+/* line 60, _src/styles/post.scss */
 .md.post-content code, .md.post-content pre {
-  background-color: #e6e9ed;
+  background-color: #f6f6f6;
 }
-/* line 51, _src/styles/post.scss */
+/* line 64, _src/styles/post.scss */
 .md.post-content pre {
   width: 100%;
   margin-left: -20px;
@@ -780,9 +810,9 @@ pre, code {
   top: 50%;
   left: 15%;
   line-height: 2.5em;
-  border-top: 4px solid #434a54;
-  border-bottom: 4px solid #434a54;
-  background-color: #e6e9ed;
+  border-top: 4px solid #444444;
+  border-bottom: 4px solid #444444;
+  background-color: #f6f6f6;
   -webkit-box-shadow: inset 0 1px white;
   -moz-box-shadow: inset 0 1px white;
   box-shadow: inset 0 1px white;
