--- a/_src/styles/markdown.scss
+++ b/_src/styles/markdown.scss
@@ -44,7 +44,7 @@ $border-color: darken($color-rule-2, 20%);
   pre {
     padding: 10px 20px;
     margin: 1.5em 1px;
-    overflow: scroll;
+    overflow: auto;
     line-height: 1.5em;
   }
 
