--- a/public/css/app.css
+++ b/public/css/app.css
@@ -580,7 +580,7 @@ pre, code {
 .md pre {
   padding: 10px 20px;
   margin: 1.5em 1px;
-  overflow: scroll;
+  overflow: auto;
   line-height: 1.5em;
 }
 /* line 51, _src/styles/markdown.scss */
