give pjax a try

--- a/_src/styles/content.scss
+++ b/_src/styles/content.scss
@@ -8,9 +8,29 @@
 .content-container {
   width: $global-width;
   margin: 50px auto 90px;
+  position: relative;
 
   .disqus-wrap {
     margin-top: 80px;
+  }
+
+  &.fadeOut {
+    -webkit-animation: up-fade-out 0.5s ease-out forwards;
+  }
+
+  &.fadeIn {
+    -webkit-animation: up-fade-in 0.5s ease-out backwards;
+  }
+}
+
+@-webkit-keyframes up-fade-out {
+  0% {
+    top: 0;
+    opacity: 1;
+  }
+  100% {
+    top: -30px;
+    opacity: 0;
   }
 }
 
