--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,9 @@
       <!-- syntax highlighting CSS -->
       <link rel="stylesheet" href="/css/syntax.css">
 
+      <!-- vendor CSS -->
+      <link rel="stylesheet" href="/public/css/vendor.css">
+
       <!-- Custom CSS -->
       <link rel="stylesheet" href="/public/css/app.css">
 
@@ -22,17 +25,17 @@
       <div class="header-container">
         <h1 class="site-title">{{ site.name }}&nbsp;<a href="/atom.xml" class="site-rss"><i class="icon-rss"></i></a></h1>
         <div class="site-owner">
-          <a href="/etc/jd"><img src="/img/avatar.png" alt="" class="owner-avatar"><b></b></a>
+          <a href="/etc/jd"><img src="/img/avatar.png" alt="" class="owner-avatar js-pjax"><b></b></a>
         </div>
         <ul class="site-menu">
-          <li><a href="/" data-content="&#xf015;"><span><i class="icon-home icon-large"></i>&nbsp;HOME</span></a></li>
+          <li><a class="js-pjax" href="/" data-content="&#xf015;"><span><i class="icon-home icon-large"></i>&nbsp;HOME</span></a></li>
           <li>
             <a href="https://github.com/{{ site.author.github }}" target="_blank" data-content="&#xf09b;"><span><i class="icon-github icon-large"></i>&nbsp;GITHUB</span></a>
             <div class="menu-tip js-github-user github-user-container" data-user="{{ site.author.github }}">
               Loading...
             </div>
           </li>
-          <li><a href="/about" data-content="&#xf118;"><span><i class="icon-smile icon-large"></i>&nbsp;ABOUT</span></a></li>
+          <li><a class="js-pjax" href="/about" data-content="&#xf118;"><span><i class="icon-smile icon-large"></i>&nbsp;ABOUT</span></a></li>
         </ul>
       </div>
     </div>
@@ -40,14 +43,14 @@
       <div class="header-container">
         <h1 class="site-title">{{ site.name }}&nbsp;<a href="/atom.xml" class="site-rss"><i class="icon-rss"></i></a></h1>
         <ul class="site-menu">
-          <li><a href="/" data-content="&#xf015;"><span><i class="icon-home icon-large"></i>&nbsp;HOME</span></a></li>
+          <li><a class="js-pjax" href="/" data-content="&#xf015;"><span><i class="icon-home icon-large"></i>&nbsp;HOME</span></a></li>
           <li>
             <a href="https://github.com/{{ site.author.github }}" target="_blank" data-content="&#xf09b;"><span><i class="icon-github icon-large"></i>&nbsp;GITHUB</span></a>
             <div class="menu-tip js-github-user github-user-container" data-user="{{ site.author.github }}">
               Loading...
             </div>
           </li>
-          <li><a href="/about" data-content="&#xf118;"><span><i class="icon-smile icon-large"></i>&nbsp;ABOUT</span></a></li>
+          <li><a class="js-pjax" href="/about" data-content="&#xf118;"><span><i class="icon-smile icon-large"></i>&nbsp;ABOUT</span></a></li>
         </ul>
       </div>
     </div>
@@ -72,6 +75,7 @@
       </div>
     </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    <script src="/public/js/vendor.js"></script>
     <script src="/public/js/app.js"></script>
     <script>require("app")</script>
   </body>
