--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -6,7 +6,7 @@
       {% capture previous_url %}page/{{ paginator.previous_page }}{% endcapture %}
     {% endif %}
     <li>
-      <a href="/{{ previous_url }}" title="Go to previous page">
+      <a class="js-pjax" href="/{{ previous_url }}" title="Go to previous page">
         <i class="icon-double-angle-left"></i>
       </a>
     </li>
@@ -19,13 +19,13 @@
       {% if page == paginator.page %}
         {{ page }}
       {% else %}
-        <a href="/{{ page_url }}">{{ page }}</a>
+        <a class="js-pjax" href="/{{ page_url }}">{{ page }}</a>
       {% endif %}
     </li>
     {% endfor %}
     {% if paginator.next_page %}
     <li>
-      <a href="/page/{{ paginator.next_page }}" title="Go to next page">
+      <a class="js-pjax" href="/page/{{ paginator.next_page }}" title="Go to next page">
         <i class="icon-double-angle-right"></i>
       </a>
     </li>
